# bs_math

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cbuild.sh
app/: circle_tangent_planes.cpp  circumscribed_square_of_circle.cpp  intersection_line_plane.cpp  points_side_line.cpp
cmake/: global_definition.cmake  install_files.cmake
common/: global_definition.h  mathu.cpp  mathu.h
geometry/: CMakeLists.txt
geometry/include/: common.h  plane.h  triangle.h
geometry/plane/: plane.cpp  plane.h
geometry/src/: plane.cpp  triangle.cpp
geometry/test/: plane_test.cpp  transform_test.cpp  triangle_test.cpp  vector_test.cpp
geometry/transform/: calculate_euler.py  inverse_transform.py  inverse_vector.py  transform.cpp  transform.h
geometry/triangle/: triangle.h
geometry/vector/: vector.cpp  vector.h
linear_algebra/: CMakeLists.txt
linear_algebra/eigen/: eigen.cpp  eigen.h
linear_algebra/test/: eigen_test.cpp
randomized-algorithm/: CMakeLists.txt  README.md
randomized-algorithm/cmake/: build_libraries.cmake
randomized-algorithm/include/: knuth_shuffle.h
randomized-algorithm/src/: knuth_shuffle.cpp
randomized-algorithm/test/: knuth_shuffle_test.cpp
sorting/: CMakeLists.txt
sorting/bfprt/: bfprt.cpp  bfprt.h
sorting/bubble_sort/: bubble_sort.cpp  bubble_sort.h
sorting/insert_sort/: insert_sort.cpp  insert_sort.h
sorting/make_pair/: make_pair.cpp  make_pair.h
sorting/merge_vector/: merge_vector.cpp  merge_vector.h
sorting/quick_sort/: quick_sort.cpp  quick_sort.h
sorting/select_sort/: select_sort.cpp  select_sort.h
sorting/test/: bfprt_test.cpp  bubble_sort_test.cpp  insert_sort_test.cpp  make_pair_test.cpp  merge_vector_test.cpp  quick_sort_test.cpp  select_sort_test.cpp
statistics/: CMakeLists.txt
statistics/include/: variance.h
statistics/src/: variance.cpp
statistics/test/: variance_test.cpp
statistics/variance/: variance.cpp
stochastic/: CMakeLists.txt  README.md
stochastic/include/: knuth_shuffle.h
stochastic/knuth_shuffle/: knuth_shuffle.cpp
stochastic/test/: knuth_shuffle_test.cpp
